--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -1,27 +1,34 @@
 .navbar {
-    background-color: #f2f2f2;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+  background-color: #f2f2f2;
+  display: grid;
+  justify-content: end;
+  padding: 1rem 1rem;
+  margin-bottom: 1rem;
+}
+
+.navbarItem {
+  margin: 0rem 1rem;
 }
 
 .navbarList {
-    list-style: none;
-    grid-column: 6 /-1;
-    display: flex;
-    justify-content: space-around;
+  list-style: none;
+  display: grid;
+  justify-content: end;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
 }
 
 .navbarLink {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
 }
 
 .signinButton {
-    background-color: #333;
-    color: #fff;
-    padding: 8px 12px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  background-color: #333;
+  color: #fff;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
